src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__validation__bad_name-10.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "cannot upload a crate with a reserved name"
    }
  ]
}
