src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__validation__bad_name-2.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "invalid character ` ` in crate name: `foo bar`, characters must be an ASCII alphanumeric characters, `-`, or `_`"
    }
  ]
}
