src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__validation__bad_name-4.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "invalid character `☃` in crate name: `snow☃`, characters must be an ASCII alphanumeric characters, `-`, or `_`"
    }
  ]
}
