src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__validation__bad_name.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
snapshot_kind: text
---
{
  "errors": [
    {
      "detail": "crate name cannot be empty"
    }
  ]
}
